wasm/fastq_extract_quality_scores_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_d2abcmpj/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/3b725c5845ab0eeb76354f6318ea9a2a2ff860de.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/3b725c5845ab0eeb76354f6318ea9a2a2ff860de.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/d71a6951322348a5ed3e6862cc0e1fb695044b49.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/d71a6951322348a5ed3e6862cc0e1fb695044b49.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/675b87e76ef475ab2c5333713eddb540d539cf0f.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/675b87e76ef475ab2c5333713eddb540d539cf0f.json" for subsequent builds)
cache:INFO:  - ok
